2004-06-28  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* rtai-core/malloc/malloc.c: renamed global heap variable and added
	a few lines to allow integrating shared memory.

	* rtai-core/rtai_core/ipc/shm.c: cleanup and changes to integrate 
	with malloc.

	* rtai-core/rtai_core/include/rtai_shm.h: cleanup and changes to 
	integrate with malloc.

2004-06-25  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Add back SUBDIRS= in KBUILD_CMD.

2004-06-23  Philippe Gerum  <rpm@xenomai.org>

	* rtai-testsuite/kern: Pass RTAI_FP_CFLAGS when compiling 2.6
	modules.

	* configure.in: Do not pass SUBDIRS to the kernel builder anymore;
	only rely on M=.

2004-06-23  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* rtai-core/arch/i386/hal.c: use USER_DS in trapping Linux traps.

2004-06-23  Philippe Gerum  <rpm@xenomai.org>

        * rtai-core/include/asm-i386/rtai_lxrt.h: Make
	lxrt_switch_context() mostly look like kilauea's version.

	* rtai-core/sched/rtai: Force regparm(0) for all task trampolines
	so that we are still safe if CONFIG_REGPARM is enabled. Need same
	fix from Adeos >= 2.6r6c1.

2004-06-22  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sys_lxrt.c: Have prototypes using
	asmlinkage in sync between definition and declaration.

2004-06-22  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/sched_rtai/sched_lxrt.c: modified (UN)LOCK_LINUX to
	  take into account that rtai_pcu_lxrt flags are used no more; 
	  simplified checking of the state of a switched in soft task 
	  after changes in rtai_schedmod.h.
        * rtai-core/sched_rtai/sys_lxrt.c: modified rtai_lxrt_fastpath to
	  take into account that rtai_pcu_lxrt flags are used no more.
        * rtai-core/include/asm-i386/rtai_hal.h: nomore rtai_cpu_lxrt,
	  cleaned unused functions, modified switching to realtime/linux
	  and related data for nested use.
        * rtai-core/include/asm-i386/rtai_lxrt.h: added a prudential saving
	  of all registers in task switching.