@@ -84,6 +84,7 @@ RTAI-specific switches are:
  --enable-fpu		Enable FPU support
  --enable-math-c99	Enable math C99 support
  --enable-malloc-vmalloc	Enable vmalloc support in malloc
+ --enable-malloc-heap-size	Set size of real-time malloc heap
  --enable-cpus		Enable CPUs
  --enable-dox-doc       Build Doxygen documentation
  --enable-dbx           Build Docbook XML documentation.
