@@ -821,7 +821,7 @@ AC_ARG_ENABLE(math-c99,
 	esac])
 AC_MSG_RESULT(${CONFIG_RTAI_MATH_C99:-no})
 
-AC_MSG_CHECKING(for vmalloc support in MALLOC)
+AC_MSG_CHECKING(for vmalloc use in real-time malloc support)
 AC_ARG_ENABLE(malloc-vmalloc,
 	[ --enable-malloc-vmalloc	Enable vmalloc support in malloc],
 	[case "$enableval" in
@@ -829,6 +829,21 @@ AC_ARG_ENABLE(malloc-vmalloc,
 	*) unset CONFIG_RTAI_MALLOC_VMALLOC ;;
 	esac])
 AC_MSG_RESULT(${CONFIG_RTAI_MALLOC_VMALLOC:-no})
+
+AC_MSG_CHECKING(for size of real-time malloc heap)
+AC_ARG_ENABLE(malloc-heap-size,
+	[ --enable-malloc-heap-size	Set size of real-time malloc heap],
+	[case "$enableval" in
+ changequote(,)dnl
+	[0-9]*) CONFIG_RTAI_MALLOC_HEAPSZ=$enableval ;;
+ changequote([,])dnl
+	*) AC_MSG_ERROR([Bad argument to option: --enable-malloc-heap-size=<Kbytes>]) ;;
+	esac])
+if test x$CONFIG_RTAI_MALLOC_HEAPSZ = x ; then
+  # Use a reasonable default if unset (in Kbytes)
+  CONFIG_RTAI_MALLOC_HEAPSZ=128
+fi
+AC_MSG_RESULT($CONFIG_RTAI_MALLOC_HEAPSZ)
 
 AC_MSG_CHECKING(for number of CPUs (SMP-only))
 AC_ARG_ENABLE(cpus,
@@ -1163,6 +1178,7 @@ test x$CONFIG_RTAI_XENOMAI_DEBUG = xy && AC_DEFINE(CONFIG_RTAI_XENOMAI_DEBUG,1,[
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_SCHED_8254_LATENCY,$CONFIG_RTAI_SCHED_8254_LATENCY,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_SCHED_APIC_LATENCY,$CONFIG_RTAI_SCHED_APIC_LATENCY,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_SCHED_LXRT_NUMSLOTS,$CONFIG_RTAI_SCHED_LXRT_NUMSLOTS,[Kconfig])
+AC_DEFINE_UNQUOTED(CONFIG_RTAI_MALLOC_HEAPSZ,$CONFIG_RTAI_MALLOC_HEAPSZ,[Kconfig])
 if test x$CONFIG_DEVFS_FS = xy; then
    fifos_template="/dev/rtf/%d"
 else
