@@ -264,6 +264,15 @@ config RTAI_MALLOC_VMALLOC
 	depends on RTAI_EXTENDED && RTAI_MALLOC
 	default n
 
+config RTAI_MALLOC_HEAPSZ
+	string "Size of the global heap (Kbytes)"
+	depends on RTAI_MALLOC
+	default 128
+	help
+	RTAI pre-allocates a global heap as part of its initialization
+	chores. This parameter allows to define its size (in
+	kilobytes).
+
 config RTAI_TASKLETS
 	tristate "Tasklets"
 	default m
