@@ -57,7 +57,7 @@
 #define	RTHEAP_MINALIGNSZ RTHEAP_MINALLOCSZ
 #define	RTHEAP_NBUCKETS   (RTHEAP_MAXLOG2 - RTHEAP_MINLOG2 + 2)
 #define	RTHEAP_MAXEXTSZ   (1 << 24) /* i.e. 16 Mo */
-#define RTHEAP_GLOBALSZ   KMALLOC_LIMIT*2
+#define RTHEAP_GLOBALSZ   (CONFIG_RTAI_MALLOC_HEAPSZ * 1024)
 
 #define RTHEAP_PFREE   0
 #define RTHEAP_PCONT   1
